# students-statistics-MPI

./: CMakeLists.txt  README.md  main.c  partitioning_scheme.drawio  tasks.puml  tasks_dependencies.puml
python_stddev/: main.py  main_jupyter.ipynb
python_testbench/: main.py
studentspar/: CMakeLists.txt  gabarito.py  parallel_comparison.py  parallel_comparison_logic_testing.py  studentspar.c
studentsseq/: CMakeLists.txt  old_studentsseq.c  overview.puml  studentsseq.c
test_median/: CMakeLists.txt  test_median.c
